style: swiched back to java version to also support 8